force-app/main/default/objects/TransactionLog__c/TransactionLog__c.object-meta.xml
<CustomObject>
    <description>This custom object store the data for alert selected by user from the front end side.</description>
    <label>Transaction Log</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>System Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>