force-app/main/default/objects/TransactionLog__c/fields/LogType__c.field-meta.xml
<CustomField>
    <fullName>LogType__c</fullName>
    <label>Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>