force-app/main/default/objects/TransactionLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LogType__c</columns>
    <columns>Process_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>